Tue Oct 07 20:32:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Chats display in the buddy list correctly.

Tue Oct 07 20:03:25 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added the Group context-sensitive menu.

Tue Oct 07 19:24:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Rewrote the buddy list context-sensitive menu code to reduce
	    code duplication and ease maintenance a bit.

Tue Oct 07 19:07:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Hooked up signals for removing buddies, groups, and contacts in
	    the buddy list.

Tue Oct 07 08:49:51 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Now using signals to remove code duplicate between QGaimBuddyList
	    and QGaimBListWindow.

Mon Oct 06 22:05:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Appended a Slot suffix to some slot functions. I don't feel
	    like updating the rest of qpe-gaim yet.

Mon Oct 06 20:44:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added a convenience function to QGaimBuddyList that returns the
	    selected buddy, taking into account contacts.

Mon Oct 06 20:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - The IM item in the context-sensitive menu for buddies and contacts
	    now works.

Mon Oct 06 19:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	  - Added the UI for the notify formatted dialog.
