@@ -1,3 +1,10 @@
+Tue Oct 07 21:11:16 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	* src/QGaimBuddyList.cpp:
+	  - The Add Buddy and Add Chat in the Add menu work again.
+
 Tue Oct 07 20:32:33 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
